syntax = "proto3";
package yuhaiin.config;

option go_package = "github.com/Asutorufa/yuhaiin/pkg/protos/config";

import "config/log/log.proto";
import "config/bypass/bypass.proto";
import "config/dns/dns.proto";
import "config/listener/listener.proto";

message setting {
  bool ipv6 = 7 [ json_name = "ipv6" ];
  bool ipv6_local_addr_prefer_unicast = 10
      [ json_name = "ipv6_local_addr_prefer_unicast" ];
  // net_interface, eg: eth0
  string net_interface = 6 [ json_name = "net_interface" ];
  system_proxy system_proxy = 1 [ json_name = "system_proxy" ];
  yuhaiin.bypass.config bypass = 2 [ json_name = "bypass" ];
  yuhaiin.dns.dns_config dns = 4 [ json_name = "dns" ];
  yuhaiin.listener.inbound_config server = 5 [ json_name = "server" ];
  yuhaiin.log.logcat logcat = 8 [ json_name = "logcat" ];
  config_version config_version = 9 [ json_name = "config_version" ];
  platform platform = 11 [ json_name = "platform" ];
}

message system_proxy {
  bool http = 2 [ json_name = "http" ];
  bool socks5 = 3 [ json_name = "socks5" ];
}

message info {
  string version = 1 [ json_name = "version" ];
  string commit = 2 [ json_name = "commit" ];
  string build_time = 3 [ json_name = "build_time" ];
  string go_version = 4 [ json_name = "go_version" ];
  string arch = 5 [ json_name = "arch" ];
  string platform = 6 [ json_name = "platform" ];
  string os = 7 [ json_name = "os" ];
  string compiler = 8 [ json_name = "compiler" ];
  repeated string build = 9 [ json_name = "build" ];
}

message config_version { uint64 version = 1 [ json_name = "version" ]; }

message platform { bool android_app = 1 [ json_name = "android_app" ]; }