syntax = "proto3";

package yuhaiin.listener;

option go_package = "github.com/Asutorufa/yuhaiin/pkg/protos/config/listener";

message protocol {
  string name = 1 [ json_name = "name" ];
  bool enabled = 2 [ json_name = "enabled" ];
  oneof protocol {
    http http = 3 [ json_name = "http" ];
    socks5 socks5 = 4 [ json_name = "socks5" ];
    redir redir = 5 [ json_name = "redir" ];
    tun tun = 6 [ json_name = "tun" ];
  }
}

message config { map<string, protocol> servers = 5 [ json_name = "servers" ]; }

message http {
  string host = 1 [ json_name = "host" ];
  string username = 3 [ json_name = "username" ];
  string password = 4 [ json_name = "password" ];
}

message socks5 {
  string host = 1 [ json_name = "host" ];
  string username = 3 [ json_name = "username" ];
  string password = 4 [ json_name = "password" ];
}

message redir { string host = 1 [ json_name = "host" ]; }

message tun {
  // name of the tun device
  // eg: tun://tun0, fd://123
  string name = 1 [ json_name = "name" ];
  int32 mtu = 2 [ json_name = "mtu" ];
  string gateway = 3 [ json_name = "gateway" ];
  bool dns_hijacking = 4 [ json_name = "dns_hijacking" ];
  bool skip_multicast = 6 [ json_name = "skip_multicast" ];
  enum endpoint_driver {
    fdbased = 0;
    channel = 1;
    system_gvisor = 2;
  }
  endpoint_driver driver = 7 [ json_name = "driver" ];
  string portal = 8 [ json_name = "portal" ];
}

message yuubinsya {
  string host = 1 [ json_name = "host" ];
  string password = 2 [ json_name = "password" ];
  message protocol_normal {};
  oneof protocol {
    normal normal = 3 [ json_name = "normal" ];
    tls tls = 4 [ json_name = "tls" ];
    quic quic = 5 [ json_name = "quic" ];
    websocket websocket = 6 [ json_name = "websocket" ];
  }
}

message normal {};
message websocket { tls_config tls = 1 [ json_name = "tls" ]; };
message quic { tls_config tls = 1 [ json_name = "tls" ]; };
message tls { tls_config tls = 1 [ json_name = "tls" ]; };

message tls_config {
  bytes cert = 1 [ json_name = "cert" ];
  bytes key = 2 [ json_name = "key" ];
}